--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-12 header-section">
+<div class="col-md-12 header-section custom-header">
   <div class="col-md-3 col-sm-5 col-xs-5">
     <p>Speakers Program</p>
     <h2>Create Event</h2>
