--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -1,11 +1,108 @@
 <mat-horizontal-stepper [linear]="isLinear" #stepper>
   <mat-step [stepControl]="firstFormGroup">
-   First
+    <mat-card class="first-wrap">
+      Event Inforrmation
+      <div class="clearfix"></div>
+      <hr>
+      <div class="col-md-4">
+        <ul>
+          <li><b>ID</b>: 2558</li>
+          <li><b>Product</b>: MSBDHDJD</li>
+          <li><b>Program Date</b>: 9/6/2019</li>
+        </ul>
+      </div>
+
+      <div class="col-md-4">
+        <ul>
+          <li><b>Program Type</b>: 2558</li>
+          <li><b>Speaker</b>: MSBDHDJD</li>
+          <li><b>Terotirry</b>: 9/6/2019</li>
+        </ul>
+      </div>
+
+      <div class="col-md-4">
+        <ul>
+          <li><b>Venue</b>: 111 Club FGS</li>
+        </ul>
+      </div>
+    </mat-card>
+    <mat-card class="second-wrap">
+      Patient Program logistic <span class="pull-right">Save & Next ></span>
+      <div class="clearfix"></div>
+      <hr>
+      <div class="col-md-6">
+        <div class="form-group">
+          <label>Program Series</label>
+          <select class="form-control" name="" id="">
+            <option>2019 Patient Programs</option>
+            <option></option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label>Product</label>
+          <select class="form-control" name="" id="">
+            <option>NuerioScience-MG</option>
+            <option></option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label>Topic</label>
+          <select class="form-control" name="" id="">
+            <option>Patient Group</option>
+            <option></option>
+          </select>
+        </div>
+        <div class="form-group radio-group">
+          <label>Program Type</label>
+          <div class="clearfix"></div>
+          <div class="col-md-5">
+            <label><input type="radio" name="optradio" checked>Live</label>
+            <label><input type="radio" name="optradio">Virtual</label>
+            <label><input type="radio" name="optradio"></label>
+          </div>
+          <div class="col-md-7">
+            <input type="text" class="form-control" placeholder="Others">
+          </div>
+        </div> 
+        <div class="cleearfix"></div>
+        <div class="form-group">
+          <mat-form-field>
+            <input matInput [matDatepicker]="picker" placeholder="Date Picker">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+        </div>   
+        <div class="form-group">
+          <mat-form-field>
+            <input matInput [matDatepicker]="picker1" placeholder="Alternate Program Date">
+            <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+            <mat-datepicker #picker1></mat-datepicker>
+          </mat-form-field>
+        </div>
+        <div class="form-group">
+          <label>Speaker Program Start Time</label>
+          <div class="clearfix"></div>
+          <div class="col-md-3"><input class="form-control"></div>
+          <div class="col-md-3"><input class="form-control"></div>
+          <div class="col-md-3"><input class="form-control"></div> 
+        </div>
+        <div class="form-group">
+          <label>Speaker Program End Time</label>
+          <div class="clearfix"></div>
+          <div class="col-md-3"><input class="form-control"></div>
+          <div class="col-md-3"><input class="form-control"></div>
+          <div class="col-md-3"><input class="form-control"></div> 
+        </div> 
+      </div>
+      <div class="col-md-6"></div>
+      <div class="clearfix"></div>
+      <br>
+    </mat-card>
   </mat-step>
   <mat-step [stepControl]="secondFormGroup">
-     Second
+    <mat-card>Second</mat-card>
   </mat-step>
   <mat-step>
-    Third
+    <mat-card>Third</mat-card>
   </mat-step>
 </mat-horizontal-stepper>
