--- a/src/app/create-event/create-event.component.css
+++ b/src/app/create-event/create-event.component.css
@@ -4,7 +4,7 @@ mat-horizontal-stepper{
 }
 mat-card ul{
     list-style-type: none;
-    padding-left: 0px;
+    padding-left: 15px;
 }
 .mat-step-icon .mat-icon{
     display: none;
@@ -34,4 +34,65 @@ mat-card ul{
     float: left;
     width: 100%;
 }
-  
+.pl-0{
+    padding-left: 0px;
+}  
+.right-form-wrap .form-group input[type='radio']{
+    margin-right: 10px;
+    margin-left: 10px;
+} 
+.primary-custom{
+    background-color: blue;
+    border:1px solid blue;
+    color: #fff;
+    padding: 3px 30px; 
+    margin-left: 15px;
+}
+.second-wrap.mat-card label {
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: 300;
+    font-size: 13px;
+}
+.p-l-25{
+    padding-left: 35px; 
+    padding-right: 0px
+}
+.p-r-25{ 
+    padding-right: 35px;
+    padding-left: 0px
+}
+.form-control{
+    height: 30px;
+}
+.header-text-style{
+    color: blue;
+    font-size: 25px;
+    font-weight: 700;
+}
+b, strong {
+    font-weight: 700;
+    color: darkslategrey;
+}
+.clr-blue{
+    color: blue;
+}
+.clr-grey{
+    color: grey;
+}
+.clr-lightgrey{
+    background-color: lightgrey;
+}
+.mat-checkbox-layout{
+    margin-bottom: 10px;
+}
+.fs-12{
+    font-size: 12px;
+}
+.border{
+    border-right: 1px solid lightgray;
+} 
+.height5{
+    height: 5px;
+}
