--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -1,7 +1,7 @@
 <mat-horizontal-stepper [linear]="isLinear" #stepper>
   <mat-step [stepControl]="firstFormGroup">
     <mat-card class="first-wrap">
-      Event Inforrmation
+      <div class="col-md-12"><span class="header-text-style">Event Inforrmation</span></div>
       <div class="clearfix"></div>
       <hr>
       <div class="col-md-4">
@@ -27,76 +27,162 @@
       </div>
     </mat-card>
     <mat-card class="second-wrap">
-      Patient Program logistic <span class="pull-right">Save & Next ></span>
+      <div class="col-md-12"><span class="header-text-style">Patient Program logistic</span> <span class="pull-right clr-blue">Save
+          & Next ></span></div>
       <div class="clearfix"></div>
       <hr>
-      <div class="col-md-6">
+      <div class="col-md-6 p-r-25 p-l-0 border">
         <div class="form-group">
-          <label>Program Series</label>
-          <select class="form-control" name="" id="">
-            <option>2019 Patient Programs</option>
-            <option></option>
-          </select>
+          <div class="col-md-12">
+            <label>Program Series</label>
+            <select class="form-control" name="" id="">
+              <option>2019 Patient Programs</option>
+              <option></option>
+            </select>
+          </div>
         </div>
         <div class="form-group">
-          <label>Product</label>
-          <select class="form-control" name="" id="">
-            <option>NuerioScience-MG</option>
-            <option></option>
-          </select>
+          <div class="col-md-12">
+            <label>Product</label>
+            <select class="form-control" name="" id="">
+              <option>NuerioScience-MG</option>
+            </select>
+          </div>
         </div>
         <div class="form-group">
-          <label>Topic</label>
-          <select class="form-control" name="" id="">
-            <option>Patient Group</option>
-            <option></option>
-          </select>
+          <div class="col-md-12">
+            <label>Topic</label>
+            <select class="form-control" name="" id="">
+              <option>Patient Group</option>
+              <option></option>
+            </select>
+          </div>
         </div>
         <div class="form-group radio-group">
-          <label>Program Type</label>
-          <div class="clearfix"></div>
-          <div class="col-md-5">
-            <label><input type="radio" name="optradio" checked>Live</label>
-            <label><input type="radio" name="optradio">Virtual</label>
-            <label><input type="radio" name="optradio"></label>
+          <div class="col-md-12">
+            <label>Program Type</label>
+            <div class="clearfix height5"></div>
+            <div class="col-md-6 pl-0">
+              <mat-radio-group>
+                <mat-radio-button value="1">Live </mat-radio-button>
+                <mat-radio-button value="1">Virtual </mat-radio-button>
+                <mat-radio-button value="2"> </mat-radio-button>
+              </mat-radio-group>
+            </div>
+            <div class="col-md-5 pl-0">
+              <input type="text" class="form-control" placeholder="Others">
+            </div>
           </div>
-          <div class="col-md-7">
-            <input type="text" class="form-control" placeholder="Others">
+        </div>
+        <div class="clearfix"></div>
+        <div class="form-group">
+          <div class="col-md-12">
+            <mat-form-field>
+              <input matInput [matDatepicker]="picker" placeholder="Date Picker">
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
           </div>
-        </div> 
-        <div class="cleearfix"></div>
-        <div class="form-group">
-          <mat-form-field>
-            <input matInput [matDatepicker]="picker" placeholder="Date Picker">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-          </mat-form-field>
-        </div>   
-        <div class="form-group">
-          <mat-form-field>
-            <input matInput [matDatepicker]="picker1" placeholder="Alternate Program Date">
-            <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-            <mat-datepicker #picker1></mat-datepicker>
-          </mat-form-field>
         </div>
         <div class="form-group">
-          <label>Speaker Program Start Time</label>
-          <div class="clearfix"></div>
-          <div class="col-md-3"><input class="form-control"></div>
-          <div class="col-md-3"><input class="form-control"></div>
-          <div class="col-md-3"><input class="form-control"></div> 
+          <div class="col-md-12">
+            <mat-form-field>
+              <input matInput [matDatepicker]="picker1" placeholder="Alternate Program Date">
+              <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+              <mat-datepicker #picker1></mat-datepicker>
+            </mat-form-field>
+          </div>
         </div>
         <div class="form-group">
-          <label>Speaker Program End Time</label>
-          <div class="clearfix"></div>
-          <div class="col-md-3"><input class="form-control"></div>
-          <div class="col-md-3"><input class="form-control"></div>
-          <div class="col-md-3"><input class="form-control"></div> 
-        </div> 
-      </div>
-      <div class="col-md-6"></div>
+          <div class="col-md-12">
+            <label>Speaker Program Start Time</label>
+            <div class="clearfix"></div>
+            <div class="col-md-3 pl-0"><input class="form-control"></div>
+            <div class="col-md-3"><input class="form-control"></div>
+            <div class="col-md-3"><input class="form-control"></div>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-md-12">
+            <label>Speaker Program End Time</label>
+            <div class="clearfix"></div>
+            <div class="col-md-3 pl-0"><input class="form-control"></div>
+            <div class="col-md-3"><input class="form-control"></div>
+            <div class="col-md-3"><input class="form-control"></div>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-md-12">
+            <label>Time Zone</label>
+            <select class="form-control" name="" id="">
+              <option>NuerioScience-MG</option>
+            </select>
+          </div>
+        </div>
+      </div><!-- left-form-wrap -->
+
+
+      <div class="col-md-6 p-l-25 right-form-wrap">
+        <div class="form-group">
+          <div class="col-md-5"><label>Attendies</label><input type="text" class="form-control"></div>
+          <div class="col-md-5"><label>Speakers</label><input type="text" class="form-control clr-lightgrey"></div>
+        </div>
+        <div class="form-group">
+          <div class="col-md-12">
+            <label>Total Number of Alexion Employees</label>
+            <input type="text" class="form-control">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-md-12">
+            <label>Total</label>
+            <input type="text" class="form-control clr-lightgrey">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-md-12">
+            <label>Maximun meal per Attendee</label>
+            <div class="clearfix"></div>
+            <div class="col-md-4 pl-0"><b>Breaksfast:</b> $25</div>
+            <div class="col-md-4"><b>Lunch:</b> $25</div>
+            <div class="col-md-4"><b>Dinnetr:</b> $25</div>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-md-12">
+            <label>Meal Type</label>
+            <div class="clearfix height5"></div>
+            <mat-radio-group>
+              <mat-radio-button value="1">No Meal </mat-radio-button>
+              <mat-radio-button value="1">Breakfast </mat-radio-button>
+              <mat-radio-button value="2">Lunch </mat-radio-button>
+              <mat-radio-button value="1">Dinner </mat-radio-button>
+              <mat-radio-button value="2">Snacks </mat-radio-button>
+            </mat-radio-group>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-md-12">
+            <label class="clr-grey">Optional Meeting Services</label>
+            <div class="clearfix"></div>
+            <mat-checkbox>Px onsite coordinator at your Meeting <b>(Admin Only)</b></mat-checkbox>
+            <mat-checkbox>Print Invitation generated and mailed to you for distribution</mat-checkbox>
+            <mat-checkbox>Email Invitation sent to you for distribution</mat-checkbox>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <p class="fs-12">
+            <i>This services are 'add-on' to be selected as needed at additional cost</i>
+          </p>
+        </div>
+        <div class="form-group">
+          <div class="col-md-12 text-right">
+            <button mat-button>Reset</button>
+            <button mat-button class="primary-custom">Save & Next</button>
+          </div>
+        </div>
+      </div><!-- Right-form-wrap -->
       <div class="clearfix"></div>
-      <br>
     </mat-card>
   </mat-step>
   <mat-step [stepControl]="secondFormGroup">
