second-section-page

--- a/src/app/create-event/create-event.component.css
+++ b/src/app/create-event/create-event.component.css
@@ -33,9 +33,7 @@ mat-card ul{
     margin-bottom: 15px;
     float: left;
     width: 100%;
-}
- 
-
+} 
 .lbl-radio{
     font-weight: 200 !important;
 }
@@ -70,14 +68,10 @@ float: left;
     padding-right: 30px;
 }
 .btn-search{
-    background-color: white;
-    height: 50px;
-    width: 15%;
-    color: #0660d4;
-    font-size: 20px;
-    float: right;
+    background-color: white;  
+    color: #0660d4; 
+    padding: 10px 25px;
     border: 1px solid;
-    margin-top: 50px;
 }
 .search-padding{
     padding-top: 20px;
@@ -116,7 +110,8 @@ float: left;
     padding: 3px 30px; 
     margin-left: 15px;
 }
-.second-wrap.mat-card label {
+.second-wrap.mat-card label,
+.form-parent-wrapper.mat-card label{
     display: inline-block;
     max-width: 100%;
     margin-bottom: 5px;
@@ -164,3 +159,51 @@ b, strong {
 .height5{
     height: 5px;
 } 
+hr {
+    margin-top: 10px;  
+}
+.custom-ul{
+    padding-left: 0px !important;
+}
+.select-short .form-control{
+    width: 40%;
+}
+.mrb-20{
+    margin-bottom: 20px;
+}
+.custom-search{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 10px 45px;
+}
+table {
+    width: 100%;
+    margin-top:30px;
+    box-shadow: none;
+    border:1px solid #cecece;
+}
+.mrt-60{
+    margin-top: 60px;
+}
+td.mat-cell, td.mat-footer-cell, th.mat-header-cell {
+    padding: 0;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-right: 1px solid #cecece;
+    text-align: center;
+}
+
+td.mat-cell:last-of-type, td.mat-footer-cell:last-of-type, th.mat-header-cell:last-of-type { 
+    padding-left: 0px;
+    padding-right: 0px;
+}
+td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:first-of-type { 
+    padding-left: 0px;
+    padding-right: 0px;
+}
+.mat-table-top{
+    border-right: none !important;
+}
+.mat-table-top .clr-blue{
+    font-size: 14px;
+}
