--- a/src/app/create-event/create-event.component.css
+++ b/src/app/create-event/create-event.component.css
@@ -35,18 +35,19 @@ mat-card ul{
     width: 100%;
 }
  
-
+/*------------ Thrid section------- */
 .lbl-radio{
     font-weight: 200 !important;
 }
 .vanue-style{
     font-weight: 700;
+    color: darkslategrey;
 }
 .vanue-style-career{
 float: left;
 }
 .text-vanue{
-    height: 80px;
+    height: 80px !important;
     width: 65%;
 }
 .vanue-delete-btn{
@@ -64,9 +65,10 @@ float: left;
     float:  right;
 }
 .btn-reset{
-    font-size: 20px;
+    font-size: 19px;
     float:  right;
     padding-top: 13px;
+    font-weight: 500;
     padding-right: 30px;
 }
 .btn-search{
@@ -74,7 +76,7 @@ float: left;
     height: 50px;
     width: 15%;
     color: #0660d4;
-    font-size: 20px;
+    font-size: 19px;
     float: right;
     border: 1px solid;
     margin-top: 50px;
@@ -164,3 +166,47 @@ b, strong {
 .height5{
     height: 5px;
 } 
+.search-input-pad{
+    margin-top: 8px;
+}
+.search-state{
+    width: auto !important;
+}
+
+/*------------ fourth section------- */
+
+.delete-btn-fnl{
+    background-color: white;
+    height: 50px;
+    width: 26%;
+    color: #0660d4;
+    font-size: 20px;
+    float: right;
+    border: 1px solid;
+    margin-top: 50px;
+}
+.btn-submit-fnl{
+    background-color: #256bbf;
+    height: 50px;
+    width: 26%;
+    color: white;
+    font-size: 20px;
+    float:  left;
+    margin-top: 50px;
+}
+.margin-ps{
+    margin: 26px;
+}
+.pgm-exp{
+    font-size: 17px;
+    float: right;
+}
+.pgm-status{
+    font-size: 17px;
+}
+.hr-color{
+    border-top: 1px solid #b5b3b3;
+}
+ .mat-card-sd{
+    box-shadow: 7px 6px 24px -8px rgba(0,0,0,.08);
+}
