After resolve conflict....

--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -474,7 +474,7 @@
         </div>
         <div class="clearfix"></div>
         <div class="col-md-12">
-          <button class="btn btn-save"> Save & Next</button>
+            <button mat-button class="primary-custom pull-right"> Save & Next</button>
           <button class="btn btn-reset vanue-delete-btn"> Reset</button>
         </div>
       </mat-card>
@@ -519,30 +519,9 @@
                 </div>
           </div>
           <div class="clearfix"></div>
-          <div class="col-md-12">
+          <div class="col-md-12 text-right">
               <button class="btn btn-search"> Search</button>  
-          </div>
-          <div class="search-padding">
-            State
-            <select class="form-control" name="" id="">
-              <option>ST</option>
-              <option></option>
-            </select>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div>
-            Venue Type
-            <select class="form-control" name="" id="">
-              <option>Select Type</option>
-              <option></option>
-            </select>
-          </div>
-        </div>
-        <div class="col-md-12">
-          <button class="btn btn-search"> Save & Next</button>
-  
-        </div>
+          </div> 
       </mat-card>
    
         <mat-card class="second-wrap mat-card-sd">
@@ -564,8 +543,8 @@
                 <p><span class="vanue-style">PX Contact:</span> Michael Tonda</p>
             </div>
             <div class="clearfix"></div>
-            <div class="col-md-12">
-                <button class="btn btn-add-venue btn-save"> Add Venue</button>
+            <div class="col-md-12 text-right">
+                <button mat-button class="primary-custom pull-right"> Add Venue</button>
                 <button class="btn btn-search"> View Details</button>
             </div>
             <div class="clearfix"></div>
@@ -585,8 +564,8 @@
                 <p><span class="vanue-style">PX Contact:</span> Michael Tonda</p>
             </div>
             <div class="clearfix"></div><br>
-            <div class="col-md-12">
-                <button class="btn btn-add-venue btn-save"> Add Venue</button>
+            <div class="col-md-12 text-right">
+                 <button mat-button class="primary-custom pull-right"> Add Venue</button>
                 <button class="btn btn-search"> View Details</button>
             </div>
           </mat-card> 
@@ -673,7 +652,7 @@
               <p><span class="vanue-style">Additional Services:</span> PX outsite coordinator at your meeting</p>
           </div>
         </div>
-        <div class="col-md-12">
+        <div class="col-md-12 text-right">
             <button class="btn btn-search"> Edit Program</button>
         </div>
   
@@ -698,7 +677,7 @@
               </div>
            </div>
            <div class="clearfix"></div>
-           <div class="col-md-12">
+           <div class="col-md-12 text-right">
                <button class="btn btn-search"> Edit Speaker</button>
            </div>
            <div class="clearfix"></div><br>
@@ -722,18 +701,16 @@
               
              </div>
              <div class="clearfix"></div>
-             <div class="col-md-12">
+             <div class="col-md-12 text-right">
                  <button class="btn btn-search"> Edit Vanue</button>
              </div>
              <div class="clearfix"></div>
              <br>
-             <div class="col-md-6">
-                <button class="btn delete-btn-fnl"> Delete</button>
+             <div class="col-md-12 text-center">
+                <button class="btn btn-search"> Delete</button>
+                <button class="btn primary-custom mat-button"> Submit</button>
              </div>
-             <div class="col-md-6">
-                <button class="btn btn-submit-fnl"> Submit</button>
-              </div>
-              <div class="clearfix"></div>
+               <div class="clearfix"></div>
               <br>
               <div class="col-md-6 ">
                  <a class="pgm-exp">Program Exception </a>
