--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -44,7 +44,7 @@
             </div>
           </div>
           <div class="form-group">
-            <div class="col-md-12">
+            <div class="col-md-12 test">
               <label>Product</label>
               <select class="form-control" name="" id="">
                 <option>NuerioScience-MG</option>
