--- a/src/styles.css
+++ b/src/styles.css
@@ -38,9 +38,11 @@ hr {
 } 
 .mat-horizontal-stepper-header-container {
    background: white;
-}
-.mat-horizontal-stepper-header-container { 
-  width: 600px; 
+} 
+.mat-horizontal-stepper-header { 
+  width: 125px;
+  text-align: center; 
+  height: 90px !important;
 }
 .mat-horizontal-content-container{
   padding: 0px !important; 
@@ -158,12 +160,15 @@ color: white;
 .mat-step-icon-state-number.mat-step-icon.mat-step-icon-selected{
   background-color: white;
   color: blue;
-  border: 1px solid blue;
+  border: 1px solid blue; 
 }
 .mat-step-header .mat-step-icon {
   background-color: #fff;
   color: rgba(0,0,0,.54);
   border: 1px solid rgba(0,0,0,.54);
+  margin-right: auto !important;
+  margin: auto;
+  margin-top: 20px;
 }
 .mat-form-field{
   width: 100%;
@@ -220,3 +225,10 @@ color: white;
 .mat-checkbox-checked.mat-accent .mat-checkbox-background, .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
   background-color: blue;
 }
+.mat-step-label{
+  position: absolute;
+  bottom: 20px;
+  margin: auto;
+  left: 0px;
+  right: 0px;
+} 
